--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,15 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.flex{
+    display:flex
+}
+
+.justify-content-between{
+    justify-content: space-between;
+}
+
+.m-auto{
+    margin: auto;
+}
